# ibus-unikey

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt
.github/workflows/: commit.yml  regression.yaml
.requirement.d/: debian
CMakeModules/: FindGLIB.cmake  FindIBUS.cmake
Libraries/Ukengine/: CMakeLists.txt
Libraries/Unikey/: CMakeLists.txt  Config.h
Libraries/Unikey/Source/: Config.cc  Engine.cc
Tests/Pipeline/: Build.sh  Prepare.sh
Tests/Pipeline/Environments/: Ubuntu
Tools/Setup/: .CMakeLists.txt.swo  .ibus-unikey.ui.swp  .macro_utils.cpp.swp  .macro_utils.h.swp  .main.cpp.swp  .signal_handlers.cpp.swo  .signal_handlers.cpp.swp  .signal_handlers.h.swp  CMakeLists.txt
Tools/Setup/Data/po/: .vi.po.swp
Tools/Setup/Source/Engine/: Main.cc
Tools/Setup/Source/UI/: Handlers.cc  Main.cc  Utils.cc
Tools/Utilities/: generate-customized-livecd-image.sh
tests/chromium-browser/: test_use_keyboard_for_typing.py
tests/chromium-browser/steps/: 0000_install_chromium_browser.sh  0002_disable_gnome_keyring.sh  0003_verify_unikey_without_valgrind.sh  9999_clear_everything_after_finish.sh
tests/gedit/: test_use_keyboard_for_typing.py
tests/gedit/steps/: 0001_verify_unikey_without_valgrind.sh  0003_verify_unikey_without_valgrind.sh
tests/pipeline/: build.sh  test.sh
tests/pipeline/environments/: ubuntu
tests/pipeline/libraries/: Console.sh
tools/utilities/: generate-customized-livecd-image.sh
